// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContentsListItem renders correctly when active or inactive 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1.emotion-1 {
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  font-weight: 600;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

@media not all and (max-width: 1024px) {
  .emotion-1.emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1.emotion-1:hover,
.emotion-1.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink emotion-1"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-1"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 1
      </span>
    </a>
  </li>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1.emotion-1 {
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

@media not all and (max-width: 1024px) {
  .emotion-1.emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1.emotion-1:hover,
.emotion-1.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink emotion-1"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-2"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`ContentsListItem renders with different depths 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1.emotion-1 {
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

@media not all and (max-width: 1024px) {
  .emotion-1.emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1.emotion-1:hover,
.emotion-1.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink emotion-1"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-1"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 1
      </span>
    </a>
  </li>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1.emotion-1 {
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 16px;
  width: 100%;
}

@media not all and (max-width: 1024px) {
  .emotion-1.emotion-1 {
    padding-left: calc(14px + 16px);
  }
}

.emotion-1.emotion-1:hover,
.emotion-1.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink emotion-1"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="#item-2"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;
